# PhenoTypic

./: .buildinfo  .gitignore  .gitmodules  INTERACTIVE_MEASUREMENT_SUMMARY.md  PHENO_DESIGN_PATTERNS.md  README.md  build-environment-windows.yml  build-environment.yml  conftest.py  downloadables.html  environment.yml  genindex.html  image_pipeline_diagrams.md  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: downloadables.doctree  index.doctree  installation.doctree
.doctrees/api_reference/: index.doctree  modules.doctree  phenotypic.abc_.doctree  phenotypic.analysis.abc_.doctree  phenotypic.analysis.doctree  phenotypic.core.doctree  phenotypic.correction.doctree  phenotypic.data.doctree  phenotypic.detect.doctree  phenotypic.doctree  phenotypic.enhance.doctree  phenotypic.grid.doctree  phenotypic.measure.doctree  phenotypic.prefab.doctree  phenotypic.refine.doctree  phenotypic.tools.colourspaces_.doctree  phenotypic.tools.constants_.doctree  phenotypic.tools.doctree  phenotypic.tools.exceptions_.doctree  phenotypic.tools.funcs_.doctree  phenotypic.tools.hdf_.doctree  phenotypic.util.doctree
.doctrees/contrib_guide/: architecture.doctree  contributing.doctree  documentation.doctree  extending.doctree  index.doctree  testing.doctree
.doctrees/user_guide/: index.doctree  overview.doctree
.github/workflows/: documentation.yml  publish_to_pypi.yml  run-pytest.yml
.run/: phenotypic-debug-parallel.run.xml  phenotypic-debug.run.xml
_downloads/07a2189796556e67152c552c6cc82b98/: phenotypic-cli.py
_downloads/a15acbc81d7a04b08da59f0c0a9a6546/: GrowthCurves.ipynb
_downloads/a8cf4aaa212e89d67b40b51f7094f661/: GettingStarted.ipynb
_modules/: index.html
_sources/: downloadables.rst.txt  index.rst.txt  installation.rst.txt
_sources/api_reference/: index.rst.txt  modules.rst.txt  phenotypic.abc_.rst.txt  phenotypic.core.rst.txt  phenotypic.enhance.rst.txt  phenotypic.prefab.rst.txt  phenotypic.refine.rst.txt  phenotypic.rst.txt  phenotypic.tools.constants_.rst.txt  phenotypic.tools.exceptions_.rst.txt  phenotypic.tools.hdf_.rst.txt  phenotypic.tools.rst.txt
_sources/contrib_guide/: contributing.rst.txt  documentation.rst.txt  extending.rst.txt  index.rst.txt
_sources/user_guide/: index.rst.txt  overview.rst.txt
_static/: custom.css
api_reference/: index.html  modules.html  phenotypic.abc_.html  phenotypic.analysis.abc_.html  phenotypic.analysis.html  phenotypic.core.html  phenotypic.correction.html  phenotypic.data.html  phenotypic.detect.html  phenotypic.enhance.html  phenotypic.grid.html  phenotypic.html  phenotypic.measure.html  phenotypic.prefab.html  phenotypic.refine.html  phenotypic.tools.colourspaces_.html  phenotypic.tools.constants_.html  phenotypic.tools.exceptions_.html  phenotypic.tools.funcs_.html  phenotypic.tools.hdf_.html  phenotypic.tools.html  phenotypic.util.html
api_reference/api/: phenotypic.GridImage.grid.html  phenotypic.GridImage.html  phenotypic.Image.color.html  phenotypic.Image.enh_gray.html  phenotypic.Image.gray.html  phenotypic.Image.html  phenotypic.Image.objects.html  phenotypic.Image.objmap.html  phenotypic.Image.objmask.html  phenotypic.Image.rgb.html  phenotypic.abc_.BaseOperation.html  phenotypic.abc_.GridCorrector.html  phenotypic.abc_.GridFinder.html  phenotypic.abc_.GridMeasureFeatures.html  phenotypic.abc_.GridObjectDetector.html  phenotypic.abc_.GridOperation.html  (+133 more)
conda-recipe/: meta.yml
contrib_guide/: architecture.html  contributing.html  documentation.html  extending.html  index.html  testing.html
debug/: checkmem.py
docs/: Makefile
examples/: GALLERY_HEADER.rst  MakeSynthetics.ipynb  Measurements.ipynb  README.rst  Working with Images.ipynb  colorimetry.ipynb  example_basic_usage.py  growth_curves.ipynb  hdf_pandas_demo.py  image_data_components_tutorial.ipynb  image_set.ipynb  interactive_jupyter_example.ipynb  kmarx_pipeline.ipynb  log_growth_model_example.py  measure_size.ipynb  pandas_hdf5_example.py  tukey_outlier_example.py  watershed_pipeline.ipynb
module_templates/: MeasureTemplate.py
phenoscope/: __init__.py
phenoscope.egg-info/: PKG-INFO  SOURCES.txt
test/: Test_GriddedImage.py  Test_Image.py  Test_OtsuDetector.py
tests/: Test_Image.py  Test_ObjectExtractor.py  test_accessor_numpy_interface.py  test_docstring_parsing.py  test_edge_correction.py  test_fixtures.py  test_gamma_decoder.py  test_gitter_detector.py  test_grid_image.py  test_hdf_pandas.py  test_image.py  test_image_pipeline.py  test_image_pipeline_batch.py  test_image_pipeline_unit.py  test_image_set.py  test_interactive_tools.py  test_lazy_widget_mixin.py  test_log_growth_model.py  test_measure_color_composition.py  test_measurement.py  test_merge_on_same_index.py  test_metadata_io.py  test_operation.py  test_pipeline_serialization.py  test_pipeline_widget.py  test_prefab.py  test_tukey_outlier.py
user_guide/: index.html  overview.html
(+1169 files in other folders)
