[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]

[project]
name = 'phenoscope'

version = '0.4.2a'

authors = [
    {name='Alexander Nguyen', email="xander-git@protonmail.com"}
]

description = "An image processing framework created for Ex-FAB NSF BioFoundry that aims to streamline the development of image processing tools for phenotype image analysis."

readme="README.md"

requires-python = "~=3.10"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10"
]

dependencies = [
    "pandas",
    "numpy",
    "seaborn",
    "scikit-image",
    "scikit-learn",
    "scipy",
]

[projects.urls]
Repository = "https://github.com/Xander-git/PhenoScope"

[tool.pytest.ini_options]
testpaths = ["./tests/*"]
addopts = "--verbose --capture=no"