[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./src"]

[project]
name = 'phenoscope'
dynamic = ["version"]

authors = [
    {name='Alexander Nguyen', email="xander-git@protonmail.com"}
]

description = "An image processing framework created for Ex-FAB NSF BioFoundry that aims to streamline the development of image processing pipelines for images analysis of phenotypes."

readme="README.md"

requires-python = "~=3.10"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10"
]

dependencies = [
    "pandas",
    "numpy",
    "seaborn",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "opencv-python",
    "h5py",
    "mahotas",
    "pillow",
    "sphinx",
    "sphinxcontrib-napoleon",
    "sphinx-autodoc-typehints",
    "sphinxawesome-theme",
    "furo"
]

[projects.urls]
Repository = "https://github.com/Xander-git/PhenoScope"

[tool.pytest.ini_options]
testpaths = ["./tests/*"]
addopts = "--verbose --capture=no"

[tool.setuptools.dynamic]
version = {attr = "src.phenoscope.__version__"}