[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = 'phenotypic'
dynamic = ["version"]

authors = [
    { name = 'Alexander Nguyen', email = "xander-git@protonmail.com" }
]

description = "An image processing framework created for Ex-FAB NSF BioFoundry that aims to streamline the development of image processing pipelines for images analysis of phenotypes."

readme = "README.md"

requires-python = ">=3.10, <3.13"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "pandas[excel,plot,performance,output-formatting,computation,hdf5,compression,clipboard]",
    "numpy",
    "seaborn",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "opencv-python",
    "h5py",
    "mahotas",
    "pillow",
    "tqdm",
    "mmh3",
    "plotly-express>=0.4.1",
    "psutil>=7.0.0",
    "colour-science>=0.4.6",
    "rawpy>=0.25.1; sys_platform!='win32'",
    "threadpoolctl>=3.6.0",
    "pandas2hdf>=1.0.0",
]

[project.urls]
Repository = "https://github.com/Wheeldon-Lab/PhenoTypic"

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "pympler; sys_platform!='win32'",
    "pytest>=8.4.0",
    "pytest-cov",
    "mypy",
    "jupyter;sys_platform!='win32'",
    "ipykernel;sys_platform!='win32'",
    "sphinx",
    "sphinxcontrib-napoleon",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "sphinxawesome-theme",
    "nbsphinx",
    "pydata-sphinx-theme",
    "myst-nb;sys_platform!='win32'",
    "sphinx-gallery",
    "sphinx-autosummary-accessors",
    "sphinx-design",
    "pytest-xdist>=3.8.0",
    "notebook;sys_platform!='win32'",
]

[tool.pytest.ini_options]
testpaths = ["./tests/*"]
addopts = "--verbose --capture=no"

[tool.setuptools.dynamic]
version = { attr = "phenotypic.__version__" }

[tool.setuptools.package-data]
"phenotypic" = [
    "data/*.jpg",
    "data/*.png"
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'x86_64'",
]
